test/Fail/IUnivData.agda
open import Agda.Primitive.Cubical

data BadData : IUniv where
