test/Fail/IUnivData.err
IUnivData.agda:3.6-13: error: [SortDoesNotAdmitDataDefinitions]
The universe IUniv of BadData
does not admit data or record declarations
when checking the definition of BadData
